--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,16 +2,16 @@
 <!DOCTYPE web-app PUBLIC
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<!--<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"-->
          id="WebApp_ID" version="3.0">
     <!--<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
              xmlns="http://java.sun.com/xml/ns/javaee"
              xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-    http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="SSH" version="2.5">-->
+    http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="SSH" version="2.5">
     <display-name>Archetype Created Web Application</display-name>
-    <!--启动监听器-->
+    &lt;!&ndash;启动监听器&ndash;&gt;
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -20,7 +20,7 @@
         <param-value>classpath:beans.xml</param-value>
     </context-param>
 
-    <!--struts启动-->
+    &lt;!&ndash;struts启动&ndash;&gt;
     <filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
@@ -28,7 +28,7 @@
             <param-name>struts.configuration.files</param-name>
             <param-value>classpath:struts.xml</param-value>
         </init-param>
-        <!--自动扫描action-->
+        &lt;!&ndash;自动扫描action&ndash;&gt;
         <init-param>
             <param-name>actionPackages</param-name>
             <param-value>cn.learn</param-value>
@@ -41,7 +41,7 @@
     </filter-mapping>
 
 
-    <!-- 用于session的管理、解决事务提交后再次操作数据库不能正常打开session的问题 -->
+    &lt;!&ndash; 用于session的管理、解决事务提交后再次操作数据库不能正常打开session的问题 &ndash;&gt;
     <filter>
         <filter-name>openSession</filter-name>
         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
@@ -49,8 +49,18 @@
     <filter-mapping>
         <filter-name>openSession</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
+
+    <display-name>cms</display-name>
+    <servlet>
+        <servlet-name>CommunityJumpServlet</servlet-name>
+        <servlet-class>cn.learn.web.servlet.CommunityJumpServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CommunityJumpServlet</servlet-name>
+        <url-pattern>/servlet/communityJumpServlet</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
